@@ -34,5 +34,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/org.springframework.osgi.iandt.configuration/1.1.0-m1-SNAPSHOT/org.springframework.osgi.iandt.configuration-1.1.0-m1-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/org.springframework.osgi.iandt.reference.proxy/1.1.0-m1-SNAPSHOT/org.springframework.osgi.iandt.reference.proxy-1.1.0-m1-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/springframework/osgi/servlet-api.osgi/2.4-SNAPSHOT/servlet-api.osgi-2.4-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/jcl104-over-slf4j/1.4.3/jcl104-over-slf4j-1.4.3.jar"/>
 	<classpathentry kind="output" path="target/test-classes"/>
 </classpath>
